drepin-service.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${SERVICE_NAME}-worker
  labels:
    app: ${SERVICE_NAME}
spec:
  # minReadySeconds: 60 # Number of seconds to wait after a Pod is created and its status is Ready
  replicas: 3
  template:
    metadata:
      labels:
        app: ${SERVICE_NAME}
    spec:
      containers:
      - name: ${SERVICE_NAME}-worker
        image: gcr.io/${PROJECT_NAME}/${SERVICE_NAME}
        # This setting makes nodes pull the docker image every time before
        # starting the pod. This is useful when debugging, but should be turned
        # off in production.
        imagePullPolicy: Always
        ports:
        - name: http-server
          containerPort: 8080
        # terminationGracePeriodSeconds: 60 # Number of seconds to wait for connections to terminate before shutting down Pods
        readinessProbe:
          httpGet:      
            path: /v1/healthz  # Make sure it is not slash terminated
            port: 8080
---
