drepin-service.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates an NEG after an Ingress is created
    # https://cloud.google.com/kubernetes-engine/docs/concepts/backendconfig
    beta.cloud.google.com/backend-config: '{"default": "${SERVICE_NAME}-backend-config"}'
  labels:
    app: ${SERVICE_NAME}
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: ${SERVICE_NAME}
---
