drepin-service.ingress.yaml
# https://github.com/kubernetes/ingress-gce/blob/master/README.md
# https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${SERVICE_NAME}-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "${SERVICE_NAME}-static-ip"
    ingress.gcp.kubernetes.io/pre-shared-cert: "${SERVICE_NAME}-ssl-certificate"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: ${SERVICE_NAME}-tls-secret
  ## Single Service Ingress with a default backend
  ## https://kubernetes.io/docs/concepts/services-networking/ingress/#single-service-ingress
  ## https://kubernetes.github.io/ingress-nginx/user-guide/default-backend/
  # backend:
  #   serviceName: ${SERVICE_NAME}
  #   servicePort: 8080
  ## Simple Fanout Ingress
  rules:
  - host: ${HOST_NAME}
    http:
      paths:
      - backend:
          serviceName: ${SERVICE_NAME}
          servicePort: 8080
---
